--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,68 @@
 /*  your css code here. If applicable */
+*{
+	margin:0;
+	padding:0;
+	box-sizing:border-box;
+}
+body{
+	background-color: #f5f5f5;
+}
+h1{
+	padding:10px;
+	background-color :#011e29;
+	color:white;
+	text-align:center;
+}
+.a{
+	margin:10px auto;
+	padding:20px;
+ 	background-color:white;
+ 	width:20rem; 
+	height:100%;
+	
+	display:flex;
+	
+	flex-direction:column;
+	justify-content:space-evenly;
+
+border-radius:20px;
+	text-align:center;
+	
+} 
+ .b{
+	margin:10px auto;
+	padding:20px;
+ 	background-color:white;
+	width:35rem; 
+	height:100%;
+	
+	display:flex;
+	
+	flex-direction:column;
+	justify-content:space-evenly;
+
+border-radius:20px;
+	
+	
+} 
+.c{
+	margin:10px auto;
+	padding:20px;
+ 	background-color:white;
+	width:20rem; 
+	height:100%;
+	
+	display:flex;
+	
+	flex-direction:column;
+	justify-content:space-evenly;
+
+border-radius:20px;
+	
+	
+}  
+.box{
+	display:flex; 
+	justify-content:space-evenly;
+
+}
