--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ border-radius:20px;
 	justify-content:space-evenly;
 
 border-radius:20px;
-	
+	text-align:center;
 	
 } 
 .pictorial-news-section{
@@ -58,7 +58,7 @@ border-radius:20px;
 	justify-content:space-evenly;
 
 border-radius:20px;
-	
+	text-align:center;
 	
 }  
 .box{
